@@ -1,7 +1,6 @@
 import { CommonModule } from "@angular/common";
 import { NgModule } from "@angular/core";
 import { RouterModule, Routes } from "@angular/router";
-import { BrassMusicLayoutComponent } from "./category-page/brass-music-layout.component";
 import { GuitarMusicLayoutComponent } from "./category-page/guitar-music-layout.component";
 import { PianoMusicLayoutComponent } from "./category-page/piano-music-layout.component";
 import { VoiceMusicLayoutComponent } from "./category-page/voice-music-layout.component";
@@ -14,7 +13,6 @@ const routes:Routes = [
     {path: 'guitar-music', component: GuitarMusicLayoutComponent},
     {path: 'voice-music', component: VoiceMusicLayoutComponent},
     {path: 'woodwind-music', component: WoodwindMusicLayoutComponent},
-    {path: 'brass-music', component: BrassMusicLayoutComponent},
     {path: 'home,', component: HomeLayoutComponent}
 ];
 
