@@ -1,14 +1,60 @@
+
+<div class="container-fluid dflex justify-content-around marcont">
+    <div class="row header" style="background-image: url(https://www.musicnotes.com/images/store-piano-header.jpg)">
+        <div class="col">
+            <div class="row bold">
+                Piano
+            </div>
+            <div class="row dsm">
+                DIGITAL SHEET MUSIC
+            </div>
+            
+        </div>
+
+        <div class="col">
+
+        </div>
+        <div class="col">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Guitar
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Guitar</a></li>
+                  <li><a class="dropdown-item" href="#">Bass Guitar</a></li>
+                  <li><a class="dropdown-item" href="#">Ukulele</a></li>
+                </ul>
+              </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <form class="container-fluid sb">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for Piano Music" aria-label="Search"
+                aria-describedby="basic-addon1">
+            <span class="input-group-text mnbg" id="basic-addon1">
+                <svg href="#" class="bi" width="32" height="32" fill="black">
+                    <use xlink:href="assets/bootstrap-icons.svg#search" />
+                </svg>
+            </span>
+        </div>
+    </form>
+</div>
+
 <div class="container-fluid d-flex cjust">
-    <div class="col" >
-        <img src="\assets\900x520_guitar-min.jpg" width="400">
+    <div class="col">
+        <img src="\assets\900x520_guitar-min.jpg" width="550" class="lm">
     </div>
 
     <div class="col top-pad">
-        <div class="row l1">
+        <div class="row l1 pr">
             Guitar Sheet Music
         </div>
 
-        <div class="row l2">
+        <div class="row l2 pr">
             Guitar tab, also known as tablature, is a form of written music designed just for guitar. 
             Unlike guitar sheet music, guitar tab music provides a visualization of where to place your 
             fingers as you play. Whether you're looking for an old favorite or something new to learn, 
@@ -16,14 +62,14 @@
              We also combine our tabs and traditional sheet music on the same page, so you can use whichever you prefer.
         </div>
 
-        <div class="row l2">
+        <div class="row l2 pr">
             Browse our newest and most popular tab sheet music below and sync your purchases to our free iOS, Android, or desktop apps for markup, 
             transposition, and more!
         </div>
 
-        <div class="row l3">
+        <div class="row l3 pr b">
             Browse All Guitar Tabs
-          </div>
+        </div>
     </div>
 </div>
 
@@ -38,4 +84,3 @@
         </div>
     </div>
 </div>
-
