@@ -1,15 +1,22 @@
 export const mock_sm_card_list = [
     {
-        img: "\assets\Health_Benefits_Playing_Instrument.jpg",
+        img: "\assets\MN0225974.gif",
         title: "Driver's License",
         artist: "Olivia Rodrigo",
         inst: "Piano/Vocal/Chords, Singer Pro"
     },
 
     {
-        img: "\assets\Health_Benefits_Playing_Instrument.jpg",
-        title: "Say yes",
+        img: "src\assets\MN0229052.gif",
+        title: "Willow",
         artist: "Taylor Swift",
         inst: "Piano/Vocal/Chords, Singer Pro"
+    },
+
+    {
+        img: "\assets\MN0115783.gif",
+        title: "Hallelujah",
+        artist: "Leonard Cohen",
+        inst: "Big Note, Easy Piano"
     },
 ];
