@@ -1,28 +1,80 @@
+<div class="container-fluid dflex justify-content-around marcont">
+    <div class="row header" style="background-image: url(https://www.musicnotes.com/images/store-piano-header.jpg)">
+        <div class="col">
+            <div class="row bold">
+                Piano
+            </div>
+            <div class="row dsm">
+                DIGITAL SHEET MUSIC
+            </div>
+            
+        </div>
+
+        <div class="col">
+
+        </div>
+        <div class="col">
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Piano Home
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="#">Piano Home</a></li>
+                  <li><a class="dropdown-item" href="#">Jazz</a></li>
+                  <li><a class="dropdown-item" href="#">Classical</a></li>
+                  <li><a class="dropdown-item" href="#">New Age</a></li>
+                  <li><a class="dropdown-item" href="#">Easy Piano</a></li>
+                  <li><a class="dropdown-item" href="#">Beginner Notes</a></li>
+                  <li><a class="dropdown-item" href="#">Broadway</a></li>
+                  <li><a class="dropdown-item" href="#">Country</a></li>
+                  <li><a class="dropdown-item" href="#">Christian</a></li>
+                  <li><a class="dropdown-item" href="#">Movie / TV</a></li>
+                </ul>
+              </div>
+        </div>
+    </div>
+</div>
+
+
+<div class="row">
+    <form class="container-fluid sb">
+        <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search for Piano Music" aria-label="Search"
+                aria-describedby="basic-addon1">
+            <span class="input-group-text mnbg" id="basic-addon1">
+                <svg href="#" class="bi" width="32" height="32" fill="black">
+                    <use xlink:href="assets/bootstrap-icons.svg#search" />
+                </svg>
+            </span>
+        </div>
+    </form>
+</div>
+
 <div class="container-fluid d-flex cjust">
-    <div class="col" >
-        <img src="\assets\900x520_piano-min.jpg" width="400">
+    <div class="col">
+        <img src="\assets\900x520_piano-min.jpg" width="550" class="lm">
     </div>
 
     <div class="col top-pad">
-        <div class="row l1">
+        <div class="row l1 pr">
             Piano Sheet Music
         </div>
 
-        <div class="row l2">
+        <div class="row l2 pr">
             Musicnotes provides you with the largest catalog of piano sheet music.
-             Whether you’re a professional looking for piano scores or a newcomer in 
-             search of some piano solo sheet music, we’ve got something for almost every artist, style, or arrangement.
+            Whether you’re a professional looking for piano scores or a newcomer in
+            search of some piano solo sheet music, we’ve got something for almost every artist, style, or arrangement.
         </div>
 
-        <div class="row l2">
-            Browse our newest or most popular piano sheet music below and sync your 
-            purchase to our free iOS, Android, or desktop apps for transposition, 
-            markup, audio-mixing playback, and more! 
+        <div class="row l2 pr">
+            Browse our newest or most popular piano sheet music below and sync your
+            purchase to our free iOS, Android, or desktop apps for transposition,
+            markup, audio-mixing playback, and more!
         </div>
 
-        <div class="row l3">
+        <div class="row l3 pr b">
             Browse All Piano Sheet Music
-          </div>
+        </div>
     </div>
 </div>
 
