@@ -2,7 +2,7 @@
     <div class="container">
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
-                <a routerLink="piano-music" class="nav-link active" href="#" id="pianoDropdown" roles="button" data-bs-toggle="dropdown"
+                <a class="nav-link active" href="#" id="pianoDropdown" roles="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     Piano
                 </a>
@@ -102,7 +102,7 @@
             </li>
 
             <li class="nav-item dropdown">
-                <a routerLink="guitar-music" class="nav-link active" href="#" id="guitarDropdown" roles="button" data-bs-toggle="dropdown"
+                <a class="nav-link active" href="#" id="guitarDropdown" roles="button" data-bs-toggle="dropdown"
                     aria-expanded="false">
                     Guitar
                 </a>
